# usseg_startracker

./: .gitignore  CMakeLists.txt  CatalogStar.h  Imageprocessing.py  LICENSE  README.md  StarCatalog.h  StarDetector.cpp  StarDetector.h  VotingIdentifier.h  centroids.txt  det_run.py  detector.py  estimator.cpp  function.cpp  geometric_voting.py  header.h  image_processing.py  kvector.db  main.cpp  plateSolver.py  run_det.py  run_kvector.py  test_decps.py  visualize_centroids.py
identificator/: CatalogStar.h  DetectedStar.h  PairCatalog.cpp  PairCatalog.h  StarCatalog.cpp  StarCatalog.h  VotingIdentifier.cpp  VotingIdentifier.h  attitude_determinator.py  data.py  db_70deg.npz  desktop.ini  main.py  plateSolver.py  processor.py  star_detector.py  test.py  vectorGenerator.py
identificator/pic/: ea5e33a7-93ae-4caa-986e-395ae7d625f1.jfif
identificator/test-otetra3/: centroid.py  centroids.txt  db70_analysis.py  db_70deg.npz  det_visualize.py  detector.py  generate.py  image_processing.py  kvector.db  kvector.py  plateSolver.py  run_det.py  run_gfc.py  run_ip.py  run_kvector.py  run_ps.py  test-tetra3.py  test_decps.py  visualize_centroids.py
identificator/test-otetra3/data/: db_70-1deg.npz
